--- a/app/design/frontend/creo/default/template/wishlist/item/column/cart.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/item/column/cart.phtml
@@ -88,7 +88,7 @@ function decrementQty(fid){
 <?php endforeach;?>
 </div>
 </div>
-<?php /*if ($product->isVisibleInSiteVisibility()): ?>
+<?php if ($product->isVisibleInSiteVisibility()): ?>
     <p><a class="link-edit button button-secondary" href="<?php echo $this->getItemConfigureUrl($item) ?>"><?php echo $this->__('Edit') ?></a></p>
-<?php endif*/ ?>
+<?php endif ?>
 
