--- a/app/design/frontend/creo/default/template/wishlist/button/share.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/button/share.phtml
@@ -25,6 +25,6 @@
  */
 ?>
 
-<?php /*if($this->getWishlist()->getItemsCount()): ?>
+<?php if($this->getWishlist()->getItemsCount()): ?>
     <button type="submit" name="save_and_share" title="<?php echo $this->__('Share Wishlist') ?>" class="button btn-share"><span><span><?php echo $this->__('Share Wishlist') ?></span></span></button>
-<?php endif;*/?>
+<?php endif;?>
