--- a/app/design/frontend/creo/default/template/wishlist/item/column/info.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/item/column/info.phtml
@@ -40,25 +40,33 @@ $product = $item->getProduct();
 
 
 
-<!--<div class="wishlist-sku">
+<div class="wishlist-sku">
     <span><?php echo $this->__('SKU'); ?> <?php echo $this->escapeHtml($product->getSku()) ?></span>
-</div> -->
+</div> 
 
 
 
-<!-- <div class="description std">
-    <div class="inner"> -->
-        <?php // echo $this->escapeHtml($this->stripTags($product->getShortDescription()));?>
-<!--     </div>
-</div> -->
+ <div class="description std">
+    <div class="inner"> 
+        <?php  
+		
+			$total_words = str_word_count($this->escapeHtml($this->stripTags($product->getShortDescription())));
+			if( $total_words >=  90 ){
+				echo substr($this->escapeHtml($this->stripTags($product->getShortDescription())),0,90)." ...";
+			}else{
+				echo $this->escapeHtml($this->stripTags($product->getShortDescription()));	
+			}
+		
+		?>
+     </div>
+</div> 
 
-<!--<textarea name="description[<?php echo $item->getWishlistItemId() ?>]" rows="3" cols="5" title="<?php echo $this->__('Comment') ?>" placeholder="<?php echo $this->helper('wishlist')->defaultCommentString(); ?>"><?php echo ($this->escapeHtml($item->getDescription() ? $item->getDescription() : '')) ?></textarea> -->
+<textarea name="description[<?php echo $item->getWishlistItemId() ?>]" rows="3" cols="5" title="<?php echo $this->__('Comment') ?>" placeholder="<?php echo $this->helper('wishlist')->defaultCommentString(); ?>"><?php echo ($this->escapeHtml($item->getDescription() ? $item->getDescription() : '')) ?></textarea> 
 <?php ?>
 
 <?php if($this->getSortedChildren()): ?>
     <div class="item-manage">
     <?php foreach($this->getSortedChildren() as $childName):
-     //print_r($childName);
     ?>
         <?php echo $this->getChildHtml($childName, false);?>
     <?php endforeach;?>
