--- a/app/design/frontend/creo/default/template/wishlist/item/column/remove.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/item/column/remove.phtml
@@ -25,5 +25,5 @@
  */
 
 ?>
-<?php /*?><a href="<?php echo $this->getItemRemoveUrl($this->getItem()); ?>" onclick="return confirmRemoveWishlistItem();" title="<?php echo $this->__('Remove Item') ?>"
-    class="btn-remove btn-remove2"><?php echo $this->__('Remove item');?></a> <?php */?>
+<?php ?><a href="<?php echo $this->getItemRemoveUrl($this->getItem()); ?>" onclick="return confirmRemoveWishlistItem();" title="<?php echo $this->__('Remove Item') ?>"
+    class="btn-remove btn-remove2"><?php echo $this->__('Remove item');?></a> <?php ?>
