--- a/app/design/frontend/creo/default/template/wishlist/options_list.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/options_list.phtml
@@ -27,116 +27,64 @@
 ?>
 
 
-
  <div class="options-area">
 <?php $options = $this->getOptionList(); ?>
 <?php if ($options): ?>
-<!--<div class="truncated">
-  <div class="truncated_full_value">
-      <div class="item-options"> -->
-          <?php foreach ($options as $option): 
+	<?php 
+		foreach ($options as $option){    
+			if($option['label'] == "Color")
+			{  
+				$color = $option['value'];		
+			}else  if($option['label'] == "Size"){ 
+				$size = $option['value'];
+			}
+			?>
+    <?php }?>
 
-          //print_r($option['value']);
-          if($option['label'] == "Color")
-          {  
-                $color = $option['value'];
+<?php
+$item = $this->getItem();
+$product = $item->getProduct();
+// Collect options applicable to the configurable product
+$productAttributeOptions = $product->getTypeInstance(true)->getConfigurableAttributesAsArray($product);
+$attributeOptions = array();
+foreach ($productAttributeOptions as $productAttribute) {
+    foreach ($productAttribute['values'] as $attribute) {
+        $attributeOptions[$productAttribute['label']][$attribute['value_index']] = $attribute['store_label'];
+    }
+}
+?>
+<div class="column color-area">
+    <h4>Color:</h4>
+    <ul>
+<?php
+foreach( $attributeOptions['Color'] as $ao ){
+	if(strtolower($ao) == strtolower($color) ){
+		$txt [] = '<li class="active '.strtolower($ao).'"><img width="21" height="21" alt="'.$ao.'" src="'.Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA).'/catalog/swatches/1/21x21/media/'.$ao.'.png" style="border:1px solid black; transform:skew(-15deg)"></li>';
+		}else{
+	$txt [] = '<li class="'.str_replace(" ","_",strtolower($ao)).'"><img width="21" height="21" alt="'.$ao.'" src="'.Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA).'/catalog/swatches/1/21x21/media/'.$ao.'.png"></li>';
+		}
+		
+}
+echo implode(' ',$txt);
+?>
+	</ul>
+</div>
+<div class="column size-area">
+    <h4>Size:</h4>
+    <ul>
+<?php
+foreach( $attributeOptions['Size'] as $ao ){
+	if(strtolower($ao) == strtolower($size) ){
+		$txt2 [] = '<li class="active"><a href="#" >'.$ao.'</a></li>';
+		}else{
+	$txt2 [] = '<li><a href="#" >'.$ao.'</a></li>';
+		}
+		
+}
+echo implode(' ',$txt2);
+?>
+	</ul>
+</div>
 
-          }else  if($option['label'] == "Size")
-          { 
-            $size = $option['value'];
-          }
-      ?>
-        <?php endforeach?>
-
-        <div class="column color-area">
-        <h4>Color:</h4>
-        <ul>
-         <?php 
-       $attribute_color = Mage::getSingleton('eav/config')->getAttribute('catalog_product', 'color');
-        if ($attribute_color->usesSource()) {
-           // echo $select_array[$_item->getSku()];
-            $options_color = $attribute_color->getSource()->getAllOptions(false);
-            $txt = "";
-            foreach($options_color as $option_row)
-            {
-                
-                if(strtolower($color) == strtolower($option_row['label']))
-                    {
-                $txt [] = '<li class="active '.strtolower($option_row['label']).'"><a href="#" >' .$option_row['label']. '</a></li>';
-                    }else{
-                $txt [] = '<li class="'.str_replace(" ","_",strtolower($option_row['label'])).'"><a href="#">' .$option_row['label']. '</a></li>';
-                    }
-            }
-        }
-        echo implode(' ',$txt);
-     ?> 
-        </ul>
-      </div>
-
-       <div class="column size-area">
-        <h4>Size:</h4>
-        <ul>
-      <?php 
-      //echo $size;
-
-       $attribute_size = Mage::getSingleton('eav/config')->getAttribute('catalog_product', 'size');
-        if ($attribute_size->usesSource()) {
-           // echo $select_array[$_item->getSku()];
-            $options_size = $attribute_size->getSource()->getAllOptions(false);
-            $txt = "";
-            foreach($options_size as $option_size_row)
-            {
-
-                if(strtolower($size) == strtolower($option_size_row['label']))
-                    {
-                $txt [] = '<li class="active"><a href="#" >' .$option_size_row['label']. '</a></li>';
-                    }else{
-                $txt [] = '<li><a href="#">' .$option_size_row['label']. '</a></li>';
-                    }
-            }
-        }
-        echo implode(' ',$txt);
-     ?> 
-   </ul>
-   </div>
-            
-
-      
-        <!--  <p><?php echo $this->__('Options Details'); ?></p>-- >
-         <!-- <dl>
-              <?php foreach ($options as $option): ?>
-              <dt><?php echo $this->escapeHtml($option['label']) ?></dt>
-              <dd>
-                  <?php if (is_array($option['value'])): ?>
-                  <?php echo nl2br(implode("\n", $option['value'])) ?>
-                  <?php else: ?>
-                  <?php echo $option['value'] ?>
-                  <?php endif; ?>
-              </dd>
-              <?php endforeach; ?>
-          </dl>-->
-      <!--</div> 
-  </div>
-  <a href="#" onclick="return false;" class="details"><?php echo $this->__('View Details') ?></a> 
-</div>-->
 <?php endif ?>
 </div>
- <!--<div class="column color-area">
-        <h4>Color:</h4>
-        <ul>
-          <li><a href="#"></a></li>
-          <li class="active orange"><a href="#"></a></li>
-          <li class="yellow"><a href="#"></a></li>
-          <li class="green"><a href="#"></a></li>
-          <li class="blue"><a href="#"></a></li>
-        </ul>
-      </div>
-     
-        <ul>
-          <li class="active"><a href="#">S</a></li>
-          <li><a href="#">M</a></li>
-          <li><a href="#">L</a></li>
-          <li><a href="#">XL</a></li>
-        </ul>
-      </div>
-</div> -->
