--- a/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_media.phtml
+++ b/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_media.phtml
@@ -173,7 +173,7 @@ if (!Mage::getStoreConfig('attributeswatches/cloudzoom/enabled') && !Mage::getSt
     if(!$_hide_gallery):
     ?>
     <?php if ($_carousel_direction!='vertical' ): ?>
-        <h2><?php echo $this->__('More Views') ?></h2>
+        <?php /*?><h2><?php echo $this->__('More Views') ?></h2><?php */?>
     <?php endif;?>
         <div class="<?php echo $_container_class; ?>" id="product-gallery-container">
             <ul class="<?php echo $_list_class; ?>">
