--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -1134,3 +1134,11 @@
 .catalog-product-view .product-detail { z-index: 1;}
 .products-grid { z-index: 9; position: relative;}
 #product-gallery-container .bx-wrapper ul.slides li { width:auto !important;}
+#product-options-wrapper { float: left; width: 75%;}
+#product-options-wrapper .product-swatches-container ul.has-swatches li a { margin-top: 0 !important; padding-top: !important; height: 25px; width: 25px;}
+.attributeItem { float: left; width:50%;}
+.catalog-product-view .bx-controls.bx-has-controls-direction { display: none;}
+.bx-wrapper  { background: #fff none repeat scroll 0 0;
+    border: 0px solid #fff !important;
+    box-shadow: 0 0 0px #ccc !important;}
+.catalog-product-view li.product-image-thumbs { margin-right: 1px !important;}
