--- a/app/design/frontend/creo/default/template/wishlist/item/column/info.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/item/column/info.phtml
@@ -50,9 +50,9 @@ $product = $item->getProduct();
     <div class="inner"> 
         <?php  
 		
-			$total_words = str_word_count($this->escapeHtml($this->stripTags($product->getShortDescription())));
-			if( $total_words >=  90 ){
-				echo substr($this->escapeHtml($this->stripTags($product->getShortDescription())),0,90)." ...";
+			$total_words = strlen($this->escapeHtml($this->stripTags($product->getShortDescription())));
+			if( $total_words >=  100 ){
+				echo substr($this->escapeHtml($this->stripTags($product->getShortDescription())),0,100)." ...";
 			}else{
 				echo $this->escapeHtml($this->stripTags($product->getShortDescription()));	
 			}
@@ -61,7 +61,7 @@ $product = $item->getProduct();
      </div>
 </div> 
 
-<textarea name="description[<?php echo $item->getWishlistItemId() ?>]" rows="3" cols="5" title="<?php echo $this->__('Comment') ?>" placeholder="<?php echo $this->helper('wishlist')->defaultCommentString(); ?>"><?php echo ($this->escapeHtml($item->getDescription() ? $item->getDescription() : '')) ?></textarea> 
+<textarea style="display:none" name="description[<?php echo $item->getWishlistItemId() ?>]" rows="3" cols="5" title="<?php echo $this->__('Comment') ?>" placeholder="<?php echo $this->helper('wishlist')->defaultCommentString(); ?>"><?php echo ($this->escapeHtml($item->getDescription() ? $item->getDescription() : '')) ?></textarea> 
 <?php ?>
 
 <?php if($this->getSortedChildren()): ?>
