wishlist qa issues resolved

--- a/app/design/frontend/creo/default/template/attributeswatches/wishlist_item_column_image.phtml
+++ b/app/design/frontend/creo/default/template/attributeswatches/wishlist_item_column_image.phtml
@@ -29,6 +29,6 @@ $product = $item->getProduct();
 $_img = $this->helper("attributeswatches")->getWishlistImage($item, 113, 113);
 ?>
 
-<a class="product-image" href="<?php echo $this->getProductUrl($item) ?>" title="<?php echo $this->escapeHtml($product->getName()) ?>">
-    <img src="<?php echo $_img; ?>" width="113" height="113" alt="<?php echo $this->escapeHtml($product->getName()) ?>" />
-</a>
+<!--<a class="product-image" href="<?php //echo $this->getProductUrl($item) ?>" title="<?php //echo $this->escapeHtml($product->getName()) ?>">
+    <img src="<?php //echo $_img; ?>" width="113" height="113" alt="<?php //echo $this->escapeHtml($product->getName()) ?>" />
+</a>-->
