--- a/app/design/frontend/creo/default/template/wishlist/item/column/info.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/item/column/info.phtml
@@ -25,6 +25,7 @@
  */
 
 /* @var Mage_Wishlist_Model_Item $item */
+
 $item = $this->getItem();
 $product = $item->getProduct();
 $item_s = Mage::getModel('wishlist/item')
@@ -33,7 +34,6 @@ $item_s = Mage::getModel('wishlist/item')
 $simple_product = $item_s['simple_product']->getData();
 $simple_product_id = $simple_product['product_id'];
 $simple_product_attr = Mage::getModel('catalog/product')->load($simple_product_id);
-
 ?>
 <div class="col-xs-7">
 <div class="product-details">
@@ -52,17 +52,15 @@ $simple_product_attr = Mage::getModel('catalog/product')->load($simple_product_i
     <span><?php echo $this->__('SKU'); ?> <?php echo $this->escapeHtml($product->getSku()) ?></span>
 </div> 
 
-
-
  <div class="description std">
     <div class="inner"> 
         <?php  
 		
-			$total_words = strlen($this->escapeHtml($this->stripTags($product->getShortDescription())));
+			$total_words = strlen($this->escapeHtml($this->stripTags($simple_product_attr['description'])));
 			if( $total_words >=  100 ){
-				echo substr($this->escapeHtml($this->stripTags($product->getShortDescription())),0,100)." ...";
+				echo substr($this->escapeHtml($this->stripTags($simple_product_attr['description'])),0,100)." ...";
 			}else{
-				echo $this->escapeHtml($this->stripTags($product->getShortDescription()));	
+				echo $this->escapeHtml($this->stripTags($simple_product_attr['description']));	
 			}
 		
 		?>
