wishlist resolve fatal error

--- a/app/design/frontend/creo/default/template/wishlist/item/column/info.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/item/column/info.phtml
@@ -31,15 +31,22 @@ $product = $item->getProduct();
 $item_s = Mage::getModel('wishlist/item')
      ->loadWithOptions($item->getId(), 'simple_product')
      ->getOptionsByCode();
+if($item_s){
 $simple_product = $item_s['simple_product']->getData();
 $simple_product_id = $simple_product['product_id'];
 $simple_product_attr = Mage::getModel('catalog/product')->load($simple_product_id);
+}
 ?>
 <div class="col-xs-7">
 <div class="product-details">
+<?php
+if($item_s){
+?>
 <img src="<?php echo $this->helper('catalog/image')
     ->init($simple_product_attr ,'small_image')->resize(113,113);  ?>" width="113" height="113" alt="<?php echo $this->escapeHtml($product->getName()) ?>" />
-
+<?php
+}
+?>
     <h3>PRODUCT DETAILS</h3>
  <strong class="title">
     <a href="<?php echo $this->getProductUrl($item) ?>" title="<?php echo $this->escapeHtml($product->getName()) ?>"><?php echo $this->escapeHtml($product->getName()) ?></a>
