--- a/app/design/frontend/creo/default/template/wishlist/item/column/remove.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/item/column/remove.phtml
@@ -27,3 +27,5 @@
 ?>
 <?php ?><a href="<?php echo $this->getItemRemoveUrl($this->getItem()); ?>" onclick="return confirmRemoveWishlistItem();" title="<?php echo $this->__('Remove Item') ?>"
     class="btn-remove btn-remove2"><?php echo $this->__('Remove item');?></a> <?php ?>
+
+    <p><a class="link-edit button button-secondary" href="<?php echo $this->getItemConfigureUrl($this->getItem()) ?>"><?php echo $this->__('Edit') ?></a></p>
