--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -4341,6 +4341,203 @@ textarea {
 }
 
 
+/*New Home Page*/
+
+.two-column-category .col {
+    margin-bottom: 13px;
+    padding: 0 10px;
+}
+.row.two-column-category {margin: 0 -10px;}
+.two-column-category a{
+    display: block;
+    position: relative;
+}
+.two-column-category img{
+    display: block;
+    width: 100%;
+    height: 583px;
+}
+.two-column-category .category-title{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    padding: 0 15px;
+    min-width: 102px;
+    text-align: center;
+    text-transform: uppercase;
+    background: rgba(255, 255, 255, 0.7);
+    color: #000;
+    font:bold 26px/30px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.two-column-category a:hover .category-title{
+    background: #ef4f61;
+    color: #fff;
+}
+.two-column-category .category-title strong {
+    display: table;
+    width: 100%;
+}
+.two-column-category .category-title span {
+    display: table-cell;
+    height: 583px;
+    vertical-align: middle;
+}
+.carousel-creo.home{margin: 0 0 13px;}
+.three-column-category .col {
+    margin-bottom: 13px;
+    padding: 0 10px;
+}
+.row.three-column-category {margin: 0 -10px;}
+.three-column-category a{
+    display: block;
+    position: relative;
+}
+.three-column-category img{
+    display: block;
+    width: 100%;
+    height: auto;
+}
+.three-column-category .category-title{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    padding: 20px;
+    text-align: center;
+    text-transform: uppercase;
+    background: rgba(255, 255, 255, 0.7);
+    color: #000;
+    font:bold 26px/30px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.three-column-category a:hover .category-title{
+    background: #ef4f61;
+    color: #fff;
+}
+.featured-items {margin: 0 -8px 25px;}
+.featured-items .col{padding: 0 8px 10px;}
+.featured-items .item{position: relative;}
+.featured-items .image-area img{
+    display: block;
+    width: 100%;
+    height: auto;
+}
+.featured-items .text-area {
+    padding: 15px 0 0;
+    position: relative;
+}
+.featured-items .text-area h3 {
+    color: #222;
+    float: left;
+    font: 13px/20px "Roboto Condensed",Helvetica,Arial,sans-serif;
+    margin: 0;
+    text-transform: capitalize;
+    width: 65%;
+}
+.featured-items .text-area .price {
+    color: #000;
+    display: block;
+    float: right;
+    font: 18px/20px "Roboto Condensed",Helvetica,Arial,sans-serif;
+    margin: 0 0 0 2%;
+    text-align: right;
+    width: 33%;
+}
+.featured-items .btn-holder {
+    clear: both;
+    overflow: hidden;
+    text-align: center;
+    bottom: 100%;
+    display: none;
+    position: absolute;
+    width: 100%;
+    z-index: 9999;
+}
+.featured-items .item:hover .btn-holder{display: block;}
+.featured-items .btn-holder a {
+    background: #f16167;
+    border: none;
+    color: #000;
+    float: left;
+    font: bold 14px/32px Arial,Helvetica,sans-serif;
+    position: relative;
+    text-transform: uppercase;
+    width: 77%;
+}
+.featured-items .btn-holder a:before {
+    border-color: #f16167 transparent transparent;
+    border-style: solid;
+    border-width: 32px 20px 0 0;
+    content: "";
+    height: 0;
+    position: absolute;
+    left: 100%;
+    top: 0;
+    width: 0;
+}
+.featured-items .btn-holder a:first-child {
+    background: #000;
+    border: none;
+    color: #fff;
+    float: right;
+    margin: 0;
+    padding: 0;
+    width: 13%;
+}
+.featured-items .btn-holder a:first-child:before {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 0 32px 20px;
+    border-color: transparent transparent #000;
+    content: "";
+    position: absolute;
+    right: 100%;
+    left: auto;
+    top: 0;
+}
+.featured-items .btn-holder a:hover{
+    background: #000;
+    color: #fff;
+    text-decoration: none;
+}
+.featured-items .btn-holder a:hover:before{border-color: #000 transparent transparent;}
+.featured-items .btn-holder a:first-child:hover{
+    background: #f16167;
+    color: #000;
+} 
+.featured-items .btn-holder a:first-child:hover:before{border-color: transparent transparent #f16167;}
+.col-creat-area{
+    text-align: center;
+    color: #222;
+    font: 13px/16px "Roboto Condensed",Helvetica,Arial,sans-serif;
+}
+.col-creat-area p{margin: 0 0 20px;}
+.col-about-area{
+    margin: 0;
+    padding: 0 0 20px;
+    list-style: none;
+    overflow: hidden;
+    border-bottom: 2px solid #e2e2e2;
+    color: #222;
+    font:13px/20px "Roboto Condensed",Helvetica,Arial,sans-serif;
+}
+.col-about-area li{
+    float: left;
+    margin: 0 0 15px 2%;
+    width: 18.4%;
+}
+.col-about-area li:first-child{margin-left: 0;}
+.col-about-area h3{
+    margin: 0 0 18px;
+    padding: 6px;
+    border: 2px solid #d7d7d7;
+    text-align: center;
+    text-transform: uppercase;
+    color: #222;
+    font:bold 17px/22px "Roboto Condensed",Helvetica,Arial,sans-serif;
+}
+.col-about-area p{margin: 0;}
 
 
 
@@ -4396,6 +4593,9 @@ textarea {
     .products-grid .mp_quickview_icon{top: 260px !important;}
     .subscribe-form.footer-form .button.newslettersubscribe{width: 57px !important;}
     .product-detail .btn-holder button:first-child{width: 80.4%;}
+    /*New Home Page*/
+    .two-column-category .category-title span,
+    .two-column-category img{height: 476px;}
 }
 @media only screen and (max-width: 991px) {
     #wrapper > .container{padding: 0 15px;}
@@ -4469,6 +4669,14 @@ textarea {
     .styles-lable{right: 216px !important;}
     #fme_layered_gender {margin-right:20px  !important;}
     .cate-links .actions {margin: 6px 0 0 6px !important;}
+    /*New Home Page*/
+    .two-column-category .category-title span,
+    .two-column-category img{height: 374px;}
+    .featured-items .btn-holder a{width: 80%;}
+    .col-about-area li{
+        width: 100%;
+        margin: 0 0 15px;
+    }
 }
 @media only screen and (max-width: 767px) {
     body { min-width: 768px; }
