--- a/app/design/frontend/creo/default/template/wishlist/item/column/image.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/item/column/image.phtml
@@ -28,9 +28,6 @@
 $item = $this->getItem();
 $product = $item->getProduct();
 ?>
-
-
-<!--<a style="display:none" class="product-image col-xs-1" href="<?php //echo $this->getProductUrl($item) ?>" title="<?php ///echo $this->escapeHtml($product->getName()) ?>">
-    <img class="alignleft img-responsive" src="<?php //echo $this->helper('catalog/image')->init($product, 'thumbnail')->resize(120,120); ?>" width="120" height="120" alt="<?php //echo $this->escapeHtml($product->getName()) ?>" />
+<!--<a class="product-image" href="<?php //echo $this->getProductUrl($item) ?>" title="<?php //echo $this->escapeHtml($product->getName()) ?>">
+    <img src="<?php //echo $this->helper('catalog/image')->init($product, 'thumbnail')->resize(113, 113); ?>" width="113" height="113" alt="<?php //echo $this->escapeHtml($product->getName()) ?>" />
 </a>-->
-
