wishlist add to compare button removed. share button removed

--- a/app/design/frontend/creo/default/template/wishlist/item/configure/addto.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/item/configure/addto.phtml
@@ -34,6 +34,6 @@
 <?php $_product = $this->getProduct(); ?>
 <?php $_compareUrl = $this->helper('catalog/product_compare')->getAddUrl($_product); ?>
 <?php if ($_compareUrl) : ?>
-    <li><span class="separator">|</span> <a href="<?php echo $_compareUrl ?>" class="link-compare"><?php echo $this->__('Add to Compare') ?></a></li>
-<?php endif; ?>
+<!--    <li><span class="separator">|</span> <a href="<?php //echo $_compareUrl ?>" class="link-compare"><?php //echo $this->__('Add to Compare') ?></a></li>
+--><?php endif; ?>
 </ul>
