--- a/app/design/frontend/creo/default/layout/local.xml
+++ b/app/design/frontend/creo/default/layout/local.xml
@@ -67,7 +67,14 @@
       <action method="setBlockId"><block_id>cutomecategories</block_id></action>
     </block>
 	
-	 <block type="featuredcategory/featuredcategory" name="featuredcategory" template="featuredcategory/featuredcategory.phtml" />
+	
+	<block type="cms/block" name="featuredproducts_mid">
+      <action method="setBlockId"><block_id>featuredproducts</block_id></action>
+    </block>
+	
+	
+	<block type="clarion_featuredproduct/list_list" name="featuredproducts" template="clarion/featuredproduct/list/list.phtml" before="-"/>
+	
 	<block type="cms/block" name="main_content-bottom">
       <action method="setBlockId"><block_id>about-area</block_id></action>
     </block>
