--- a/app/design/frontend/creo/default/template/clarion/featuredproduct/list/list.phtml
+++ b/app/design/frontend/creo/default/template/clarion/featuredproduct/list/list.phtml
@@ -12,9 +12,17 @@
 <?php if (($_products = $this->getProductCollection()) && $_products->getSize()): ?>
 <div id="loading"><img src="<?php echo $this->getSkinUrl('images/clarion/featuredproduct/ajax-loader.gif');?>" alt="Loading" /></div>
 <div id="featuredproductlist">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="heading-holder">
+                <h2><?php echo $this->getBlockTitle(); ?></h2>
+            </div>
+        </div>
+    </div>
+    <div class="row featured-items">
     <table border="0" id="featured-product-list-table1">
         <tr>
-            <td><h2 class="title"><?php echo $this->getBlockTitle(); ?></h2></td><td class="previousnext"> <?php echo $this->getPager() ?></td>
+            <!-- <td><h2 class="title"><?php // echo $this->getBlockTitle(); ?></h2></td> --><td class="previousnext"> <?php echo $this->getPager() ?></td>
         </tr>
         <!-- For layout dependent Columns -->
         <?php $layoutDepColCount = $this->getLayoutDependColumnCount();?>
@@ -28,61 +36,31 @@
                 <table border="0" id="featured-product-list-table2">
                     <tr>
                         <?php $i=0; foreach ($_products->getItems() as $_product): ?>
-                        <td>
-                        <table border="0" id="featured-product-list-table3">
-                        <tr>
-                            <td>
-                                <a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->escapeHtml($_product->getName()) ?>" class="product-image">
-                                <?php $_imgSize = 135; ?>
-                                <img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize); ?>" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" width="135" height="135" />
+                        <td class="col col-md-3 col-sm-6 col-xs-6">
+                            <div class="item">
+                                <a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->escapeHtml($_product->getName()) ?>" class="image-area">
+                                    <?php $_imgSize = 135; ?>
+                                    <img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize); ?>" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" width="135" height="135" />
                                 </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                 <h3 class="product-name"><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->escapeHtml($_product->getName()) ?>"><?php echo $this->escapeHtml($_product->getName()) ?></a></h3>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                 <?php if($_product->isSaleable()): ?>
-                                <button type="button" title="<?php echo $this->__('Add to Cart') ?>" class="button btn-cart" onClick="setLocation('<?php echo $this->getAddToCartUrl($_product) ?>')"><span><span><?php echo $this->__('Add to Cart') ?></span></span></button>
-                                <?php else: ?>
-                                <p class="availability out-of-stock"><span><?php echo $this->__('Out of stock') ?></span></p>
-                                <?php endif; ?>
-                            </td>
-                        </tr>
-                         <tr>
-                            <td>
-                                <?php echo $this->getReviewsSummaryHtml($_product, 'short') ?>
-                                 <?php echo $this->getPriceHtml($_product, true, '-featured') ?>
-                            </td>
-                        </tr>
-                        <?php if ($this->helper('wishlist')->isAllow()) : ?>
-                         <tr>
-                            <td>
-                                <a href="<?php echo $this->getAddToWishlistUrl($_product) ?>" class="link-wishlist"><?php echo $this->__('Add to Wishlist') ?></a>
-                            </td>
-                        </tr>
-                        <?php endif; ?>
-                          <?php if ($_compareUrl = $this->getAddToCompareUrl($_product)): ?>
-                         <tr>
-                            <td>
-                                <a href="<?php echo $_compareUrl ?>" class="link-compare"><?php echo $this->__('Add to Compare') ?></a>
-                            </td>
-                        </tr>
-                        <?php endif; ?>
-                        <tr>
-                            <td>&nbsp;
-                                
-                            </td>
-                        </tr>
-                        </table>
+                                <div class="text-area">
+                                    <h3>
+                                        <a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->escapeHtml($_product->getName()) ?>"><?php echo $this->escapeHtml($_product->getName()) ?>
+                                        </a>
+                                    </h3>
+                                    <?php echo $this->getReviewsSummaryHtml($_product, 'short') ?>
+                                    <?php echo $this->getPriceHtml($_product, true, '-featured') ?>
+                                    <div class="btn-holder">
+                                        <!-- <a href="<?php // echo $this->getAddToWishlistUrl($_product) ?>" class="link-wishlist"><i class="icon-heart-empty"></i></a> -->
+                                        <button type="button" title="<?php echo $this->__('') ?>" class="link-wishlist" onClick="setLocation('<?php echo $this->getAddToWishlistUrl($_product) ?>')"><i class="icon-heart-empty"></i><?php echo $this->__('') ?></button>
+                                        <button type="button" title="<?php echo $this->__('Add to Cart') ?>" class="btn-cart" onClick="setLocation('<?php echo $this->getAddToCartUrl($_product) ?>')"><i class="icon-basket"></i> <?php echo $this->__('Add to Cart') ?></button>
+                                    </div>
+                                </div>
+                            </div>
                         </td>
                         <?php if (++$i%$_columnCount==0): ?></tr><tr><?php endif ?>
                         <?php endforeach; ?>
                         <?php for($i; $i%$_columnCount!=0; $i++): ?>
-                        <td>&nbsp;</td>
+                        <!-- <td>&nbsp;</td> -->
                         <?php endfor ?>
                     </tr>
                 </table>
@@ -91,6 +69,7 @@
             
         </tr>
     </table>
+    </div>
 </div>
 <?php endif; ?>
 <?php endif; ?>
