--- a/skin/frontend/base/default/css/clarion_featuredproduct.css
+++ b/skin/frontend/base/default/css/clarion_featuredproduct.css
@@ -29,8 +29,8 @@ img.next-img {
 }
 #featured-product-list-table2 td{
     vertical-align: top;
-    padding-right: 10px;
-    width: 300px;
+    /*padding-right: 10px;
+    width: 300px;*/
 }
 
 #featured-product-list-table3 td{
